Closed
Bug 239843
Opened 21 years ago
Closed 21 years ago
url logging crash when nsImapProtocol not yet created
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: dveditz, Assigned: dveditz)
Details
(Keywords: regression)
Attachments
(1 file)
|
769 bytes,
patch
|
Bienvenu
:
review+
mscott
:
superreview+
chofmann
:
approval1.7+
|
Details | Diff | Splinter Review |
Some 3rd party extensions can use nsImapIncomingServer before nsImapProtocol is
contructed. The fix for bug 221023 added a static nsImapProtocol::LogImapUrl
which can be called before the IMAP PR_LogModuleInfo is created by the
nsImapProtocol contructor.
Comment 1•21 years ago
|
||
I'll look into it. What 3rd party extension would this be? You can tell me
privately if you want...
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•21 years ago
|
||
This patch solves the problem
| Assignee | ||
Updated•21 years ago
|
Attachment #145577 -
Flags: superreview?(mscott)
Attachment #145577 -
Flags: review?(mscott)
Attachment #145577 -
Flags: approval1.7?
| Assignee | ||
Updated•21 years ago
|
Attachment #145577 -
Flags: review?(mscott) → review?(bienvenu)
Comment 3•21 years ago
|
||
Comment on attachment 145577 [details] [diff] [review]
simple fix
It's interesting that this method can get called before the constructor for
nsImapProtocol which initializes the IMAP log modules:
http://lxr.mozilla.org/mozilla/source/mailnews/imap/src/nsImapProtocol.cpp#447
What other mozilla stuff is on the stack trace Dan?
Oh I see your comment in the beginning of the bug. It's a static method.
Attachment #145577 -
Flags: review?(bienvenu) → review?(mscott)
Comment 4•21 years ago
|
||
Comment on attachment 145577 [details] [diff] [review]
simple fix
yes, that's fine.
Attachment #145577 -
Flags: review?(mscott) → review+
Updated•21 years ago
|
Attachment #145577 -
Flags: superreview?(mscott) → superreview+
Comment 5•21 years ago
|
||
It's still odd that it gets called before any nsImapProtocol object is created
so I am curious about the stack trace.
Comment 6•21 years ago
|
||
Comment on attachment 145577 [details] [diff] [review]
simple fix
a=chofmann for 1.7
Attachment #145577 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Updated•21 years ago
|
Assignee: bienvenu → dveditz+bmo
Status: ASSIGNED → NEW
| Assignee | ||
Comment 7•21 years ago
|
||
Checking in nsImapProtocol.cpp;
/cvsroot/mozilla/mailnews/imap/src/nsImapProtocol.cpp,v <-- nsImapProtocol.cpp
new revision: 1.550; previous revision: 1.549
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•