bug 239843 fix crash if nsImapIncomingServer tries to log before constructing nsImapProtocol r=bienvenu, sr=mscott, a=chofmann for 1.7